1st Commit on VSCODE

--- a/developer-portfolio-master/index.html
+++ b/developer-portfolio-master/index.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Angel Zaldivar | Web Developer</title>
+    <title>Angel Zaldivar | Software Developer</title>
   </head>
 
   <body>
